# MadGraph7

./: .gitignore  .pre-commit-config.yaml  MERGE_TEST_INVESTIGATION.md  README.md  UpdateNotes.txt  VERSION  diagrams_0_ug_dwpbbxgg.eps
.github/workflows/: IOtest.yml  acceptancetest.yml  acceptancetest_madevent.yml  acceptancetest_mg7.yml  aloha.yml  copilot-setup-steps.yml  madspace.yml  madspin_parallel.yml  parralel.yml  unittest.yml  warm_cache.yml
MadSpin/: decay.py  interface_madspin.py
MadSpin/src/: driver.f  driver_decay.f  driver_prod.f  lha_read_ms.f  makefile_decay  makefile_full  makefile_prod
TEST_AMC/MGProcess/: crossx.html
aloha/: aloha_fct.py  aloha_lib.py  aloha_object.py  aloha_parsers.py  aloha_writers.py  create_aloha.py
aloha/template_files/: aloha_aux_functions.cc  aloha_aux_functions.fd_cc  aloha_aux_functions.fd_h  aloha_aux_functions.h  aloha_functions.f  (+3 more)
cudacpp/: COPYRIGHT  launch_plugin.py  model_handling.py
docs/: standalone_flavor_python.md
input/: .mg5_configuration_default.txt  multiparticles_default.txt
madmatrix/: AUTHORS  COPYRIGHT  __init__.py  launch_plugin.py  model_handling.py  output.py  trex.py
madmatrix/contrib/CMake/: CMakeLists.txt  Compilers.txt  Macros.txt  Platforms.txt
madmatrix/contrib/CMake/SubProcesses/: CMakeLists.txt  CMakeLists_P.txt
madmatrix/contrib/CMake/src/: CMakeLists.txt
madspace/: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  generate_headers.py  generate_pyi.sh  install.py  instruction_set.yaml  pyproject.toml
madspace/include/madspace/: compgraphs.h  compgraphs.hpp  constants.hpp  driver.h  driver.hpp  phasespace.h  phasespace.hpp  runtime.h  umami.h  util.h  util.hpp
madspace/include/madspace/compgraphs/: function.h  function.hpp  function_builder_mixin.h  function_builder_mixin.inc  instruction.h  instruction.hpp  opcode_mixin.h  opcode_mixin.inc  optimizer.h  optimizer.hpp  type.h  type.hpp
madspace/include/madspace/driver/: adam_optimizer.h  adam_optimizer.hpp  backend.h  backend.hpp  channel_generator.h  channel_generator.hpp  context.h  context.hpp  discrete_optimizer.h  discrete_optimizer.hpp  event_generator.h  event_generator.hpp  format.h  format.hpp  generator_data.h  generator_data.hpp  io.h  io.hpp  lhe_output.h  lhe_output.hpp  logger.h  logger.hpp  madnis_training.h  madnis_training.hpp  tensor.h  tensor.hpp  vegas_optimizer.h  vegas_optimizer.hpp
madspace/include/madspace/madcode/: function.h  optimizer.h
madspace/include/madspace/phasespace/: base.h  base.hpp  batch_sampler.hpp  channel_weight_network.h  channel_weight_network.hpp  channel_weights.h  channel_weights.hpp  chili.h  chili.hpp  color_ordered_mapping.hpp  cross_section.h  cross_section.hpp  cuts.h  cuts.hpp  discrete_flow.h  discrete_flow.hpp  discrete_sampler.h  discrete_sampler.hpp  flow.h  flow.hpp  histograms.h  histograms.hpp  integrand.h  integrand.hpp  invariants.h  invariants.hpp  luminosity.h  luminosity.hpp  madnis.h  madnis.hpp  matrix_element.h  matrix_element.hpp  mlp.h  mlp.hpp  multichannel.h  multichannel.hpp  observable.h  observable.hpp  pdf.h  pdf.hpp  (+17 more)
madspace/include/madspace/runtime/: adam_optimizer.h  backend.h  channel_generator.h  context.h  event_generator.h  generator_data.h  runtime_base.h  tensor.h  thread_pool.h
madspace/madspace/: _madspace_py.pyi  _madspace_py_loader.py  torch.py
madspace/madspace/madnis/: __init__.py  integrator.py  interface.py  losses.py
madspace/src/compgraphs/: function.cpp  instruction.cpp  instruction_set_mixin.h  instruction_set_mixin.inc  optimizer.cpp  type.cpp
madspace/src/cpu/: device.cpp  device.h  device.hpp  kernel_definitions.h  kernel_definitions.hpp  runtime.cpp  runtime.h  runtime.hpp  runtime_backward_mixin.h  runtime_backward_mixin.inc  runtime_mixin.h  runtime_mixin.inc  simd.hpp  simd_arm.hpp  simd_x86_256.hpp  simd_x86_512.h  simd_x86_512.hpp  tensor.h  tensor.hpp
madspace/src/driver/: adam_optimizer.cpp  backend.cpp  channel_generator.cpp  context.cpp  discrete_optimizer.cpp  event_generator.cpp  format.cpp  generator_data.cpp  io.cpp  lhe_output.cpp  madnis_training.cpp  tensor.cpp  thread_pool.cpp  vegas_optimizer.cpp
madspace/src/gpu/: device.cu  device.h  device.hpp  gpu_abstraction.cuh  gpu_abstraction.h  kernel_definitions.cuh  kernel_definitions.h  runtime.cu  runtime.h  runtime.hpp  runtime_backward_mixin.h  runtime_backward_mixin.inc  runtime_mixin.h  runtime_mixin.inc  tensor.cuh  tensor.h
madspace/src/kernels/: chili.hpp  cuts.hpp  definitions.hpp  discrete.hpp  invariants.hpp  kernels.hpp  kinematics.hpp  lup_det.hpp  math.h  math.hpp  multichannel.hpp  nn.h  nn.hpp  observables.hpp  operations.h  operations.hpp  pdf.hpp  rambo.hpp  scale.hpp  threeparticle.hpp  twoparticle.hpp  util.h  util.hpp  vegas.hpp
madspace/src/madcode/: function.cpp  optimizer.cpp  type.cpp
madspace/src/phasespace/: base.cpp  batch_sampler.cpp  channel_weight_network.cpp  channel_weights.cpp  chili.cpp  color_ordered_mapping.cpp  cross_section.cpp  cuts.cpp  discrete_flow.cpp  discrete_sampler.cpp  flow.cpp  histograms.cpp  integrand.cpp  invariants.cpp  luminosity.cpp  madnis.cpp  matrix_element.cpp  mlp.cpp  multichannel.cpp  observable.cpp  pdf.cpp  phasespace.cpp  rambo.cpp  scale.cpp  t_propagator_mapping.cpp  t_propagator_mapping_23.cpp  three_particle.cpp  topology.cpp  two_particle.cpp  unweighter.cpp  vegas.cpp
madspace/src/python/: function_runtime.cpp  function_runtime.h  function_runtime.hpp  instruction_set.h  instruction_set.hpp  madspace.cpp
madspace/src/runtime/: adam_optimizer.cpp  backend.cpp  channel_generator.cpp  event_generator.cpp
madspace/tests/: test_2to3_scattering.py  test_color_ordered_mapping.py  test_double_t.py  test_flow.py  test_invariants.py  test_mlp.py  test_processes.py  test_t_channel.py  test_t_propagator_23.py  test_three_body_decay.py  test_two_particle.py
mg5decay/: decay_objects.py
models/: __init__.py  check_param_card.py  import_ufo.py  model_reader.py  usermod.py  write_param_card.py
tests/: .mg5_logging.conf  IOTests.py  test_manager.py  time_db
(+1888 files in other folders)
